# SPIRA-training-prototype

./: .dockerignore  .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
resources/: controls.csv
spira/: enum.py  spira.json  spira_original.json  v2spira.json
spira/adapter/: __init__.py  config.py  random.py  random_adapter.py  read_data.py  valid_path.py
spira/core/: __init__.py
spira/core/domain/: __init__.py  audio.py  audio_processor.py  checkpoint.py  cnn_builder.py  dataloader.py  dataset.py  dataset_old.py  dataset_old_changed.py  enum.py  loss.py  max_seq_length_calculator.py  mish.py  model.py  noise_generator.py  optimizer.py  padding_inserter.py  scheduler.py  train.py  train_loss.py  wav.py
spira/core/services/: __init__.py  audio_feature_transformer.py  audio_processing.py  audio_processor.py  data_augmentation.py  data_augmentation_service.py  error_validation.py  model_trainer.py  noise_generator.py
spira/dataset/: audio_processing_labxp.py  dataset.py  dataset_labxp.py
spira/old/: analytics.py  data_extraction.py  data_split.py  feature_engineering.py  hiperparameters_configuration.py  metrics.py  train.py  validation.py
spira/tasks/: pipeline.py  train.py
spira/training/: config.py  model.py
spira/utils/: mish.py
src/: train.py
training-pipeline/: analytics.py  data_extraction.py  data_split.py  feature_engineering.py  hiperparameters_configuration.py  metrics.py  model_pipeline.py  prediction.py  train.py  validation.py
