[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["danlawand <daniel.lawand@usp.br>"]
readme = "README.md"
packages = [{include = "training-pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
scikit-learn = "1.3.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
