[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["danlawand <daniel.lawand@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
torch = "^2.1.0"
seaborn = "^0.13.0"
pydantic = "^2.4.2"
torchaudio = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
when-changed = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[scripts]
lint = "black"
